Move java options into Gradle build